--- a/index.html
+++ b/index.html
@@ -1,109 +1,116 @@
 <!DOCTYPE html>
 <html lang="sr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kalkulator za testo</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container py-4">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <div class="card shadow-sm border-0">
-            <div class="card-header bg-light">
-              <h1 class="h4 mb-0">Kalkulator za testo</h1>
-            </div>
-            <div class="card-body">
-              <form id="calc-form" class="row g-3">
-                <div class="col-md-6">
-                  <label for="tezina" class="form-label">Težina hleba (g)</label>
-                  <input type="number" step="1" min="1" class="form-control" id="tezina" placeholder="npr. 1000" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="hidratacija" class="form-label">Hidratacija (%)</label>
-                  <input type="number" step="0.1" min="1" max="120" class="form-control" id="hidratacija" placeholder="npr. 70" required>
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="scald">
-                    <label class="form-check-label" for="scald">
-                      Uključiti scald (ožareno brašno i voda)
-                    </label>
-                  </div>
-                </div>
-              </form>
 
-              <hr class="my-4">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kalkulator za testo</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-              <div id="rezultati" class="row g-3">
-                <div class="col-md-6">
-                  <div class="card result-card">
-                    <div class="card-body">
-                      <h5 class="card-title">Osnovni proračuni</h5>
-                      <p class="mb-1"><span class="label">Brašno:</span> <span id="g6">—</span> g</p>
-                      <p class="mb-1"><span class="label">Voda:</span> <span id="g5">—</span> g</p>
-                      <p class="mb-0"><span class="label">So:</span> <span id="g7">—</span> g</p>
-                    </div>
-                  </div>
+<body>
+  <div class="container py-4">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="card shadow-sm border-0">
+          <div class="card-header bg-light">
+            <h1 class="h4 mb-0">Kalkulator za testo</h1>
+          </div>
+          <div class="card-body">
+            <form id="calc-form" class="row g-3">
+              <div class="col-md-6">
+                <label for="tezina" class="form-label">Težina hleba (g)</label>
+                <input type="number" step="1" min="1" class="form-control" id="tezina" placeholder="npr. 1000" required>
+              </div>
+              <div class="col-md-6">
+                <label for="hidratacija" class="form-label">Hidratacija (%)</label>
+                <input type="number" step="0.1" min="1" max="120" class="form-control" id="hidratacija"
+                  placeholder="npr. 70" required>
+              </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="scald">
+                  <label class="form-check-label" for="scald">
+                    Uključiti scald (ožareno brašno i voda)
+                  </label>
                 </div>
+              </div>
+            </form>
 
-                <div class="col-md-6">
-                  <div class="card result-card">
-                    <div class="card-body">
-                      <h5 class="card-title">Podizač (Albert)</h5>
-                      <p class="mb-1"><span class="label">Albert (ukupno):</span> <span id="h4">—</span> g</p>
-                      <p class="mb-1"><span class="label">Voda u Albertu:</span> <span id="h5">—</span> g</p>
-                      <p class="mb-0"><span class="label">Brašno u Albertu:</span> <span id="h6">—</span> g</p>
-                    </div>
-                  </div>
-                </div>
+            <hr class="my-4">
 
-                <div class="col-md-6" id="scald-card">
-                  <div class="card result-card">
-                    <div class="card-body">
-                      <h5 class="card-title">Scald</h5>
-                      <p class="mb-1"><span class="label">Brašno za scald:</span> <span id="i6">—</span> g</p>
-                      <p class="mb-0"><span class="label">Voda za scald:</span> <span id="i5">—</span> g</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div class="card result-card">
-                    <div class="card-body">
-                      <h5 class="card-title">Zames</h5>
-                      <p class="mb-1"><span class="label">Brašno u zamesu:</span> <span id="j6">—</span> g</p>
-                      <p class="mb-0"><span class="label">Voda u zamesu:</span> <span id="j5">—</span> g</p>
-                    </div>
+            <div id="rezultati" class="row g-3">
+              <div class="col-md-6">
+                <div class="card result-card">
+                  <div class="card-body">
+                    <h5 class="card-title">Osnovni proračuni</h5>
+                    <p class="mb-1"><span class="label">Brašno:</span> <span id="g6">—</span> g</p>
+                    <p class="mb-1"><span class="label">Voda:</span> <span id="g5">—</span> g</p>
+                    <p class="mb-0"><span class="label">So:</span> <span id="g7">—</span> g</p>
                   </div>
                 </div>
               </div>
 
-              <div id="upozorenje" class="alert alert-warning d-none mt-3" role="alert">
-                Neke vrednosti su negativne. Proverite unos ili isključite scald.
+              <div class="col-md-6">
+                <div class="card result-card">
+                  <div class="card-body">
+                    <h5 class="card-title">Podizač (Albert)</h5>
+                    <p class="mb-1"><span class="label">Albert (ukupno):</span> <span id="h4">—</span> g</p>
+                    <p class="mb-1"><span class="label">Voda u Albertu:</span> <span id="h5">—</span> g</p>
+                    <p class="mb-0"><span class="label">Brašno u Albertu:</span> <span id="h6">—</span> g</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6" id="scald-card">
+                <div class="card result-card">
+                  <div class="card-body">
+                    <h5 class="card-title">Scald</h5>
+                    <p class="mb-1"><span class="label">Brašno za scald:</span> <span id="i6">—</span> g</p>
+                    <p class="mb-0"><span class="label">Voda za scald:</span> <span id="i5">—</span> g</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="card result-card">
+                  <div class="card-body">
+                    <h5 class="card-title">Zames</h5>
+                    <p class="mb-1"><span class="label">Brašno u zamesu:</span> <span id="j6">—</span> g</p>
+                    <p class="mb-0"><span class="label">Voda u zamesu:</span> <span id="j5">—</span> g</p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="card-footer bg-light text-muted small">
+
+            <div id="upozorenje" class="alert alert-warning d-none mt-3" role="alert">
+              Neke vrednosti su negativne. Proverite unos ili isključite scald.
+            </div>
+            <div class="text-end mt-4">
+              <button id="export-pdf" class="btn btn-outline-primary">Export u PDF</button>
+            </div>
+
+            <!-- Off-screen zona koja se puni za PDF -->
+            <div id="print-area" style="display:none;"></div>
+
+
+          </div>
+          <div class="card-footer bg-light text-muted small">
               Računanje po formuli koju ste naveli. Rezultati se formatiraju sa dve decimale (sr-RS). Unosi se automatski čuvaju.
-            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="app.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
